# cs240h-lab1

./: README  hist.cabal  hist.hs  words.hs
