Name:                hist
Version:             0.0
Description:         Super cool mega lambdas
License:             GPL
License-file:        LICENSE
Author:              Amit Levy
Maintainer:          levya@cs.stanford.edu
Build-Type:          Simple
Cabal-Version:       >=1.2
Executable hist
  Main-is:           hist.hs
  Build-Depends:     base >= 3 && < 5, regex-compat > 0.93, containers > 0.4